{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 561,
  "lineage": "d317ad87-f5dc-769d-e392-e4e938209d1e",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f96495a064477ffb",
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:instance/i-04cd9f0850084986a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04cd9f0850084986a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09c6f2def7820ba4a",
            "private_dns": "ip-10-43-192-188.ap-southeast-2.compute.internal",
            "private_ip": "10.43.192.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08b441086574dd182",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008535141c060e9a",
            "tags": {
              "Name": "Bastion host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0155faa475595a703"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.this",
            "module.ec2.aws_security_group.bastion-sg",
            "module.ec2.tls_private_key.this",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:security-group/sg-0155faa475595a703",
            "description": "kubectl_instance_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0155faa475595a703",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "518667233221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "demo-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:loadbalancer/app/demo-alb/881ec03d13580c5f",
            "arn_suffix": "app/demo-alb/881ec03d13580c5f",
            "dns_name": "demo-alb-497517786.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:loadbalancer/app/demo-alb/881ec03d13580c5f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-alb",
            "security_groups": [
              "sg-036546b26335d0d76"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0008535141c060e9a"
              },
              {
                "subnet_id": "subnet-029816c4d52d25233"
              },
              {
                "subnet_id": "subnet-0b3051d137e4997dc"
              }
            ],
            "subnets": [
              "subnet-0008535141c060e9a",
              "subnet-029816c4d52d25233",
              "subnet-0b3051d137e4997dc"
            ],
            "tags": {
              "Name": "demo-alb"
            },
            "vpc_id": "vpc-0399a799097bf9e06",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.ecs.aws_security_group.alb-demo-sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "demo-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:listener/app/demo-alb/881ec03d13580c5f/75d1b058929f1243",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:targetgroup/demo-tg/537b113460a8feab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:listener/app/demo-alb/881ec03d13580c5f/75d1b058929f1243",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:loadbalancer/app/demo-alb/881ec03d13580c5f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.ecs.aws_lb.demo-alb",
            "module.ecs.aws_lb_target_group.demo-tg",
            "module.ecs.aws_security_group.alb-demo-sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listener-rule-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:targetgroup/demo-tg/537b113460a8feab",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:listener-rule/app/demo-alb/881ec03d13580c5f/75d1b058929f1243/85465d3ca1b143dc",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [
                  {
                    "values": [
                      "GET",
                      "HEAD"
                    ]
                  }
                ],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:listener-rule/app/demo-alb/881ec03d13580c5f/75d1b058929f1243/85465d3ca1b143dc",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:listener/app/demo-alb/881ec03d13580c5f/75d1b058929f1243",
            "priority": 1
          },
          "dependencies": [
            "module.ecs.aws_lb.demo-alb",
            "module.ecs.aws_lb_listener.demo-http-listener",
            "module.ecs.aws_lb_target_group.demo-tg",
            "module.ecs.aws_security_group.alb-demo-sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:targetgroup/demo-tg/537b113460a8feab",
            "arn_suffix": "targetgroup/demo-tg/537b113460a8feab",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:518667233221:targetgroup/demo-tg/537b113460a8feab",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "demo-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.ecs.aws_lb.demo-alb",
            "module.ecs.aws_security_group.alb-demo-sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:security-group/sg-036546b26335d0d76",
            "description": "Security Group for application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036546b26335d0d76",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb-demo-sg",
            "name_prefix": "",
            "owner_id": "518667233221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-service-demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:security-group/sg-0c3c4c4192fd39742",
            "description": "Security Group for ECS Services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3c4c4192fd39742",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-service-demo-sg",
            "name_prefix": "",
            "owner_id": "518667233221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-service-demo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "launch-templates-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:security-group/sg-09af605e23b9b9a64",
            "description": "Security Group for Launch Template",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09af605e23b9b9a64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "launch-template-sg",
            "name_prefix": "",
            "owner_id": "518667233221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "launch-template-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-077ba09b61fe2252a",
            "public_dns": "ec2-13-237-166-126.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.237.166.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic IP Nat"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bdb7d18fe3a8728b",
            "public_dns": "ec2-3-105-254-158.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.105.254.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic IP Nat"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02177a812489bc2fa",
            "public_dns": "ec2-54-206-144-15.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.206.144.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic IP Nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:internet-gateway/igw-00e0d1c6c3b5fa5fd",
            "id": "igw-00e0d1c6c3b5fa5fd",
            "owner_id": "518667233221",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077ba09b61fe2252a",
            "id": "nat-01d8f3ffa293b23d3",
            "network_interface_id": "eni-0a250765ebbf1968e",
            "private_ip": "10.43.192.183",
            "public_ip": "13.237.166.126",
            "subnet_id": "subnet-0008535141c060e9a",
            "tags": {
              "Name": "NAT-ap-southeast-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bdb7d18fe3a8728b",
            "id": "nat-02f2fc6832294f445",
            "network_interface_id": "eni-0dc6aff949f27b6bc",
            "private_ip": "10.43.192.203",
            "public_ip": "3.105.254.158",
            "subnet_id": "subnet-0b3051d137e4997dc",
            "tags": {
              "Name": "NAT-ap-southeast-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02177a812489bc2fa",
            "id": "nat-0bb935b735852d182",
            "network_interface_id": "eni-05991717b672d8104",
            "private_ip": "10.43.192.214",
            "public_ip": "54.206.144.15",
            "subnet_id": "subnet-029816c4d52d25233",
            "tags": {
              "Name": "NAT-ap-southeast-2c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "node-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-069af12a2ffd54621",
            "owner_id": "518667233221",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01d8f3ffa293b23d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nodes-RT-ap-southeast-2a"
            },
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05b0a5792e8879b66",
            "owner_id": "518667233221",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02f2fc6832294f445",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nodes-RT-ap-southeast-2b"
            },
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aa557667fa6330ee",
            "owner_id": "518667233221",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0bb935b735852d182",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nodes-RT-ap-southeast-2c"
            },
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0befa5d161a329f2f",
            "owner_id": "518667233221",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00e0d1c6c3b5fa5fd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public RT"
            },
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "node_route_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03167c391aef49592",
            "route_table_id": "rtb-069af12a2ffd54621",
            "subnet_id": "subnet-0d06ff2fe9c9a7e24"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.node-rt",
            "module.vpc.aws_subnet.nodes_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f7126300000ddcb",
            "route_table_id": "rtb-05b0a5792e8879b66",
            "subnet_id": "subnet-057233acbecd18a04"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.node-rt",
            "module.vpc.aws_subnet.nodes_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0949c6240867e6c10",
            "route_table_id": "rtb-0aa557667fa6330ee",
            "subnet_id": "subnet-04ccce881f5c5241f"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.node-rt",
            "module.vpc.aws_subnet.nodes_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deb9320a3a6fb040",
            "route_table_id": "rtb-0befa5d161a329f2f",
            "subnet_id": "subnet-0008535141c060e9a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058d151334f182a0a",
            "route_table_id": "rtb-0befa5d161a329f2f",
            "subnet_id": "subnet-0b3051d137e4997dc"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053d6b2cc91039b40",
            "route_table_id": "rtb-0befa5d161a329f2f",
            "subnet_id": "subnet-029816c4d52d25233"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nodes_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:subnet/subnet-0d06ff2fe9c9a7e24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.43.192.128/28",
            "id": "subnet-0d06ff2fe9c9a7e24",
            "map_public_ip_on_launch": false,
            "owner_id": "518667233221",
            "tags": {
              "Name": "nodes-subnet-ap-southeast-2a"
            },
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:subnet/subnet-057233acbecd18a04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.43.192.144/28",
            "id": "subnet-057233acbecd18a04",
            "map_public_ip_on_launch": false,
            "owner_id": "518667233221",
            "tags": {
              "Name": "nodes-subnet-ap-southeast-2b"
            },
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:subnet/subnet-04ccce881f5c5241f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.43.192.160/28",
            "id": "subnet-04ccce881f5c5241f",
            "map_public_ip_on_launch": false,
            "owner_id": "518667233221",
            "tags": {
              "Name": "nodes-subnet-ap-southeast-2c"
            },
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:subnet/subnet-0008535141c060e9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.43.192.176/28",
            "id": "subnet-0008535141c060e9a",
            "map_public_ip_on_launch": false,
            "owner_id": "518667233221",
            "tags": {
              "Name": "public-subnet-ap-southeast-2a"
            },
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:subnet/subnet-0b3051d137e4997dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.43.192.192/28",
            "id": "subnet-0b3051d137e4997dc",
            "map_public_ip_on_launch": false,
            "owner_id": "518667233221",
            "tags": {
              "Name": "public-subnet-ap-southeast-2b"
            },
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:subnet/subnet-029816c4d52d25233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.43.192.208/28",
            "id": "subnet-029816c4d52d25233",
            "map_public_ip_on_launch": false,
            "owner_id": "518667233221",
            "tags": {
              "Name": "public-subnet-ap-southeast-2c"
            },
            "vpc_id": "vpc-0399a799097bf9e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:518667233221:vpc/vpc-0399a799097bf9e06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.43.192.128/25",
            "default_network_acl_id": "acl-02a60a83c702aa584",
            "default_route_table_id": "rtb-01346bc9eb389a6aa",
            "default_security_group_id": "sg-06f624e8450e8b8c6",
            "dhcp_options_id": "dopt-41d6ac26",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0399a799097bf9e06",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01346bc9eb389a6aa",
            "owner_id": "518667233221",
            "tags": {
              "Name": "Demo-VPC"
            }
          }
        }
      ]
    }
  ]
}